Bug 1617520 - Check for failure when creating default dwrite rendering params. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D97005