gfx/thebes/gfxDWriteFonts.cpp
@@ -592,6 +592,7 @@ already_AddRefed<ScaledFont> gfxDWriteFont::GetScaledFont(
     gfxDWriteFontEntry* fe = static_cast<gfxDWriteFontEntry*>(mFontEntry.get());
     bool forceGDI = GetForceGDIClassic();
 
+    // params may be null, if initialization failed
     IDWriteRenderingParams* params =
         gfxWindowsPlatform::GetPlatform()->GetRenderingParams(
             UsingClearType()
@@ -599,10 +600,11 @@ already_AddRefed<ScaledFont> gfxDWriteFont::GetScaledFont(
                             : gfxWindowsPlatform::TEXT_RENDERING_NORMAL)
                 : gfxWindowsPlatform::TEXT_RENDERING_NO_CLEARTYPE);
 
-    DWRITE_RENDERING_MODE renderingMode = params->GetRenderingMode();
-    FLOAT gamma = params->GetGamma();
-    FLOAT contrast = params->GetEnhancedContrast();
-    FLOAT clearTypeLevel = params->GetClearTypeLevel();
+    DWRITE_RENDERING_MODE renderingMode =
+        params ? params->GetRenderingMode() : DWRITE_RENDERING_MODE_DEFAULT;
+    FLOAT gamma = params ? params->GetGamma() : 2.2;
+    FLOAT contrast = params ? params->GetEnhancedContrast() : 1.0;
+    FLOAT clearTypeLevel = params ? params->GetClearTypeLevel() : 1.0;
     if (forceGDI || renderingMode == DWRITE_RENDERING_MODE_GDI_CLASSIC) {
       renderingMode = DWRITE_RENDERING_MODE_GDI_CLASSIC;
       gamma = GetSystemGDIGamma();
